WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
153646
[WinCairo] Fix compile error.
https://bugs.webkit.org/show_bug.cgi?id=153646
Summary
[WinCairo] Fix compile error.
peavo
Reported
2016-01-29 04:01:32 PST
Part of error message: ..\..\Source\WebCore\platform\text\win\LocaleWin.cpp(122): error C2784: 'bool WTF::equalLettersIgnoringASCIICase(WTF::StringView,const char (&)[length])': could not deduce template argument for 'const char (&)[length]' from 'const WTF::String'
Attachments
Patch
(1.32 KB, patch)
2016-01-29 04:07 PST
,
peavo
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
peavo
Comment 1
2016-01-29 04:07:09 PST
Created
attachment 270199
[details]
Patch
WebKit Commit Bot
Comment 2
2016-01-29 18:57:46 PST
Comment on
attachment 270199
[details]
Patch Clearing flags on attachment: 270199 Committed
r195879
: <
http://trac.webkit.org/changeset/195879
>
WebKit Commit Bot
Comment 3
2016-01-29 18:57:50 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug