[Win] Fix compile error. https://bugs.webkit.org/show_bug.cgi?id=153646

Reviewed by Darin Adler.

* platform/text/win/LocaleWin.cpp:
(WebCore::LCIDFromLocaleInternal):


Canonical link: https://commits.webkit.org/171757@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@195879 268f45cc-cd09-0410-ab3c-d52691b4dbfc